Format code by google-java-format